# mlops_topic_1_kubernates

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test_main.py
.github/workflows/: main.yml
k8s/: node-port-service.yaml
k8s/hello-joker/: values.yaml
k8s/hello-joker/templates/: deployment.yaml  servicemonitor.yaml
