[project]
name = "project-1-mlops-production"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio==3.7.0",
    "click==8.1.3",
    "exceptiongroup==1.1.1",
    "fastapi==0.95.2",
    "h11==0.14.0",
    "httpx>=0.28.1",
    "idna==3.4",
    "numpy==1.25.0",
    "prometheus-client==0.17.0",
    "prometheus-fastapi-instrumentator==6.0.0",
    "pydantic==1.10.9",
    "pyjokes>=0.8.3",
    "pytest>=9.0.2",
    "sniffio==1.3.0",
    "starlette==0.27.0",
    "starlette-exporter==0.16.0",
    "typing-extensions==4.6.3",
    "uvicorn==0.22.0",
]
